# MaramOS

./: .gitignore  LICENSE  Makefile  README.md  build.sh  kernel.elf
kernel/: Cargo.toml  Makefile  linker.ld
kernel/.cargo/: config.toml
kernel/src/: boot.rs  fpu.rs  main.rs  requests.rs  stdout.rs  tests.rs
kernel/src/acpi/: fadt.rs  hpet.rs  mcfg.rs  mod.rs
kernel/src/acpi/apic/: apic_internal.rs  ioapic.rs  lapic.rs  mod.rs
kernel/src/allocator/: buddy.rs  mod.rs  slab.rs
kernel/src/boot/: mod.rs  requests.rs
kernel/src/cpu/: ipi.rs  mod.rs  smp.rs
kernel/src/descriptors/: gdt.rs  interrupts.rs  mod.rs
kernel/src/drivers/: mod.rs  serial.rs
kernel/src/drivers/pci/: config.rs  device.rs  mod.rs  msi.rs  msix.rs
kernel/src/drivers/storage/: mod.rs  storage_cache.rs
kernel/src/drivers/storage/ahci/: commands.rs  fis.rs  mod.rs  port.rs  registers.rs
kernel/src/drivers/storage/nvme/: admin.rs  io.rs  mod.rs  queues.rs  registers.rs
kernel/src/drivers/xhci/: XHCI.md  mod.rs
kernel/src/fs/: mod.rs
kernel/src/fs/lemonfs/: bitmap.rs  hash.rs  headers.rs  helpers.rs  io.rs  mod.rs  path.rs  pointers.rs
kernel/src/gpt/: GPT-Blueprint.md  headers.rs  mod.rs  partition.rs  partition_drive.rs
kernel/src/loader/: elf.rs  mod.rs
kernel/src/memory/: heap.rs  mod.rs  page_table.rs  paging.rs  wrappers.rs
kernel/src/scheduling/: load_balancing.rs  mod.rs  scheduler.rs  task.rs
kernel/src/syscalls/: functions.rs  mod.rs  syscall_internal.rs
limine-files/: limine.conf
userspace/: bin.c  bin.elf  crt.asm  memory.h  syscalls.h  user.ld
(+3 files in other folders)
