[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
lazy_static = {version = "1.5.0", features = ["spin_no_std"]}
psf2 = { version = "0.4.0", default-features = false}
limine = "0.6.3"
spin = "0.10.0"
x86_64 = "0.15.4"

[[bin]]
name = "kernel"
bench = false
test = false

[profile.release]
panic = "abort"