[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[features]
integration-test = []

[dependencies]
limine = "0.6.5"
x86_64 = "0.15.5"
spin = "0.9"
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
simple-psf = "0.1.2"
xmas-elf = "0.10.0"

[[bin]]
name = "kernel"
test = false
bench = false
